# scraper

./: .env.example  .gitignore  BENCHMARK_SUMMARY.md  README.md  pyproject.toml
data/: ground_truth.json
scripts/: aggregate_and_print_summary.py  dump_summary_text.py  plot_benchmark_metrics.py  plot_monthly_costs.py  plot_single_metrics.py  run_benchmark.ps1
src/: __main__.py  benchmark_profile.py  runner.py  schemas.py
src/scrapers/: autonomous.py  base.py  rule_follower.py  semantic_reader.py
src/thesis_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: logger.py  metrics.py
